--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tayedul Islam Portfolio    </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Tayedul Islam Portfolio </title>
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="partition">
+            <h1>Welcome To</h1>
+            <h1><span class="tayed">Tayedul Islam</span> World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>
+                You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.
+
+            </p>
+            <a class="button" target="blank" href="https://www.linkedin.com/in/tayedul-islam-3493001a5/">HIRE ME</a>
+
+        </div>
+        <div class="partition">
+            <img src="images/tayedulislam.png" alt="myphoto">
+        </div>
+    </section>
+    <section class="middle-banner">
+        <div class="partition">
+            <img src="images/tayed-eid-portofolio.png" alt="myphoto">
+        </div>
+
+        <div class="partition">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.
+
+            </p>
+            <a class="button" target="blank" href="https://www.linkedin.com/in/tayedul-islam-3493001a5/">DOWNLOAD
+                RESUME</a>
+
+        </div>
+    </section>
+
+
 </body>
+
 </html>
