--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible">
         <div class="partition">
             <h1>Welcome To</h1>
             <h1><span class="tayed">Tayedul Islam</span> World!</h1>
@@ -33,7 +33,7 @@
             <img src="images/tayedulislam.png" alt="myphoto">
         </div>
     </section>
-    <section class="middle-banner">
+    <section class="middle-banner flexible">
         <div class="partition">
             <img src="images/tayed-eid-portofolio.png" alt="myphoto">
         </div>
@@ -51,7 +51,34 @@
 
         </div>
     </section>
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flexible">
+            <div id="web-dev" class="shadow">
+                <h1>Full Stack Web Developer</h1>
+                <h3><span class="tayed">2021-Present | Pro Level Developer</span></h3>
+                <p class="paragraph-font">
 
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div id="web-dev1" class="shadow">
+                <h1>Baby Web Developer</h1>
+                <h3><span class="tayed">2020-2021 | Programming Hero Learner</span> </h3>
+                <p class="paragraph-font">
+
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 
 </body>
 
